--- a/html/films.html
+++ b/html/films.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <ul>
+          <li><a href="/index.html" aria-current="page">Accueil</a></li>
+          <li><a href="films.html">Films</a></li>
+          <li><a href="series.html">Séries</a></li>
+          <li><a href="maListe.html">Ma Liste</a></li>
+        </ul>
 </head>
 <body>
     
