--- a/html/films.html
+++ b/html/films.html
@@ -25,7 +25,7 @@
     <!-- Navigation -->
     <header>
       <h1 class="sr-only">Xamaflix - Catalogue Films</h1>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Navigation principale">
+      <nav class="navbar navbar-expand-lg navbar-xamaflix fixed-top" aria-label="Navigation principale">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand" href="../index.html" aria-label="Accueil Xamaflix">
