--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="#main-content" class="skip-link">Aller au contenu principal</a>
     <header>
       <h1 class="sr-only">Xamaflix - Plateforme de streaming</h1>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" aria-label="Navigation principale">
+      <nav class="navbar navbar-expand-lg navbar-xamaflix fixed-top" aria-label="Navigation principale">
         <div class="container-fluid">
           <!-- Logo -->
           <a class="navbar-brand" href="index.html" aria-label="Accueil Xamaflix">
@@ -158,21 +158,21 @@
                   </div>
                 </div>
                 <div class="hero-buttons d-flex gap-3 flex-wrap">
-                  <button type="button" class="btn btn-danger btn-lg px-4">
+                  <button type="button" class="btn btn-xamaflix btn-lg px-4">
                     <svg width="20" height="20" class="me-2" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                       <path d="M6.271 5.055a.5.5 0 0 1 .52.04L11 6.7a.5.5 0 0 1 0 .6L6.791 9.915a.5.5 0 0 1-.791-.408V5.493a.5.5 0 0 1 .271-.438z"/>
                     </svg>
                     Lecture
                   </button>
-                  <button type="button" class="btn btn-outline-light px-4">
+                  <button type="button" class="btn btn-xamaflix btn-outline px-4">
                     <svg width="16" height="16" class="me-2" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
                       <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
                     </svg>
                     Plus d'infos
                   </button>
-                  <button type="button" class="btn btn-outline-light">
+                  <button type="button" class="btn btn-xamaflix btn-outline">
                     <svg width="16" height="16" class="me-2" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                     </svg>
